Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <td>Illinois</td>
     <td>8,312,717</td>
   </tr>
+  
+   <tr>
+    <td>Houston</td>
+    <td>Illinois</td>
+    <td>8,312,717</td>
+  </tr>
 </table>
   
 </body>
