--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   
    <tr>
     <td>Houston</td>
-    <td>Illinois</td>
-    <td>8,312,717</td>
+    <td>Texas</td>
+    <td>2,312,717</td>
   </tr>
 </table>
   
